2011-10-31  Mikołaj Izdebski  <zurgunt@gmail.com>

	Include ChangeLog.old in tarball
	* Makefile.am: Add ChangeLog.old to EXTRA_DIST.

	Create changelogs
	* build-aux/autogen.sh: Add gitlog-to-changelog Gnulib module.
	* ChangeLog.old: Import from v0.23.
	* ChangeLog: Generate with build-aux/gitlog-to-changelog.

2011-10-30  Mikołaj Izdebski  <zurgunt@gmail.com>

	Minor documentation cleanup

	Add BOOTSTRAP

	Add filenames and short desc to license blocks

	Run automated spelling check

	Make tests/Tester more portable

2011-10-29  Mikołaj Izdebski  <zurgunt@gmail.com>

	Make install and uninstall targets work

	Add list of subdirs to README

	Extend AUTHORS

	Import ALGORITHM

	Add a minimal README

	Cleanup manpage

2011-10-28  Mikołaj Izdebski  <zurgunt@gmail.com>

	Add scantab.h to noinst_HEADERS

2011-10-27  Mikołaj Izdebski  <zurgunt@gmail.com>

	Minor code cleanups to avoid gcc warnings
	 * Add extra braces in generated scantab.h
	 * Add __attribute__((printf, ...)) to log_fatal()
	 * Add extra switch case in lbunzip2 parser

	Make file sizes unsigned integers (uintmax_t)

	Remove SETX from lbunzip2

2011-10-23  Mikołaj Izdebski  <zurgunt@gmail.com>

	Fix Tester to support VPATH builds

	Display progress info during decompression

	Improve error messages in lbunzip2 muxer

	Move progress info printing code to main.c

	Fix a bug that prevented VPATH build from working

	Reimplement lbunzip2 magic pattern scanner as DFA

2011-10-22  Mikołaj Izdebski  <zurgunt@gmail.com>

	Cleanup and improve lbunzip2 header parser
	Improvements implemented:
	 * block overruns are detected (fixes `overrun.bz2')
	 * stream CRCs are computed and checked (fixes `crc1.bz2')
	 * initial stream headers are parsed (fixes `trash.bz2' and `void.bz2')
	 * files with gaps between streams are rejected (fixes `gap.bz2')
	 * minor speed enchancements

	NEWS were updated to reflect recent improvements.

	Implement initial header parser for lbunzip2