@@ -1,4 +1,5 @@
 Copyright (C) 2011 Mikolaj Izdebski
+Copyright (C) 2008, 2009, 2010 Laszlo Ersek
 
 This README file is part of lbzip2 version 2.0.
 
